--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
         <link rel="stylesheet" href="assets/css/v4-font-face.css">
     </head>
     <body>
+        <div class="menuOsai red">
+            <div><a class="nav-link" href="#">Interrogazione Ubicazione</a></div>
+        </div>
+        <div class="menuOsai green">
+            <div><a class="nav-link" href="#">Cambio magazzino Ubicazione</a></div>
+        </div>
+        <div class="menuOsai blue">
+            <div><a class="nav-link" href="#">Trasferimento Articoli</a></div>
+        </div>
+        <!--
         <nav class="navbar navbar-light light-blue lighten-4">
             <a class="navbar-brand" style="margin:0px" href="javascript:void(0);"><img src="assets/img/logo.png" id="icon" style="margin:0px" alt="User Icon" /></a>
             <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
@@ -33,8 +43,14 @@
                 </ul>
             </div>
         </nav>
+        -->
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
+        <script>
+            $(document).ready(function(){
+                $('.menuOsai').css('height',(window.innerHeight/3));
+            });
+        </script>
     </body>
 </html>
