--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <script>
             $(document).ready(function(){
                 $('.menuOsai').css('height',(window.innerHeight/3));
+                sessionStorage.clear();
             });
         </script>
     </body>
