--- a/interrogazione-ubicazione.html
+++ b/interrogazione-ubicazione.html
@@ -64,10 +64,11 @@
                         //},
                         success: function(data, status) {
                             let dati = data["data"];
-                            let datiStampati = "";
+                            let datiStampati = "<p style='color:red'>MAGAZZINO: <strong style='text-transform:uppercase'>"+dati[0].ID_MAGAZZINO+"</strong></p>";
                             for(let i = 0; i < Object.keys(dati).length;i++){
-                                datiStampati += "<p>Articolo: <strong>"+dati[i].ID_ARTICOLO+"</strong></p>";
-                                datiStampati += "<p>Magazzino: <strong>"+dati[i].ID_MAGAZZINO+"</strong> | Quantita: <strong>"+dati[i].QTA_GIAC_PRM+" pz. </strong></p>";
+                                
+                                datiStampati += "<p>Articolo: <strong>"+dati[i].ID_ARTICOLO+"</strong> | Quantita: <strong>"+dati[i].QTA_GIAC_PRM+" pz. </strong></p>";
+                                datiStampati += "<p>Descrizione: <strong>"+dati[i].DESCRIZIONE+"</strong> </p>";
                                 datiStampati += "<hr/>";
                             }
                             $(".listaOsai").html(datiStampati);
