--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div><a class="nav-link" href="#">Cambio magazzino Ubicazione</a></div>
         </div>
         <div class="menuOsai blue">
-            <div><a class="nav-link" href="#">Trasferimento Articoli</a></div>
+            <div><a class="nav-link" href="./trasferimento-articoli.html">Trasferimento Articoli</a></div>
         </div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script src="assets/js/popper.min.js"></script>
