--- a/trasferimento-articoli.html
+++ b/trasferimento-articoli.html
@@ -19,9 +19,10 @@
         <div class="qrcode">
             <input type="password" class="form-control focus" id="qrcode" placeholder="QRCODE" aria-describedby="basic-addon2">
         </div>
+        <div id="appendData"></div>
+        <div id="magazzinoDest"></div>
         <div>
-            <button type="button" id="btnTrasferimento" class="btn" disabled="true"> Invia
-            </button>
+            <button onclick="trasferimentoArticoli()" type="button" id="btnTrasferimento" class="btn" style="float: left; width:100%; padding: 0px 15px" disabled="true"> Invia </button>
         </div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script src="assets/js/popper.min.js"></script>
@@ -46,26 +47,41 @@
                         sessionStorage.setItem('ubicazione', barCode);
                     }
                     if(i == 2) {
-                        sessionStorage.setItem('articolo', barCode);
-                        //chiamata ws get interrogazione quantity 
+                        sessionStorage.setItem('articolo', barCode);                       
+                        $.get({
+                            url: "./ws/Interrogazione.php?codUbicazione=" + sessionStorage.getItem('ubicazione') + "&codArticolo=" + sessionStorage.getItem('articolo'),
+                            dataType: 'json',
+                            success: function(data, status) {
+                                let dati = data["data"];
+                                console.log(data);
+                                let datiStampati = "";
+                                    datiStampati += "<p style='float: left; width:100%; padding: 0px 15px'> Magazzino: <strong>"+dati[0].ID_MAGAZZINO+"</strong> </p>";
+                                    datiStampati += "<div style='float: left; width:100%; padding: 0px 15px'><p style='float: left'>";
+                                    datiStampati += " <input id='qty' class='inputOsai' type='number' value='1' min='1' max='" + dati[0].QTA_GIAC_PRM + "'/>  </p> <p style='float: right'>Quantita: <strong>"+dati[0].QTA_GIAC_PRM+"</strong>  </p> </div>";
+                                    datiStampati += "<hr/>";                                
+                                $("#appendData").html(datiStampati);
+                            }
+                            });
                     }
                     if(i == 3) {
                         sessionStorage.setItem('ubicazione-destinazione', barCode);
                         $("#btnTrasferimento").attr('disabled',false);
-                        $.post({
-                            url: "./ws/TrasferimentoArticoli.php?codUbicazione=" + sessionStorage.getItem('ubicazione') + "&codArticolo=" + sessionStorage.getItem('articolo') + "&codUbicazioneDest=" + sessionStorage.getItem('ubicazione-destinazione'),
-                            dataType: 'json',
-                            success: function(data, status) {
-                                console.log(data);
-                            }
-                            });
+                        $("#magazzinoDest").html("<p style='float: left; width:100%; padding: 0px 15px'> Magazzino destinazione: <strong>" + barCode + " </strong> </p>");
                     }
                 }
             });
             
-            document.getElementById("btnTrasferimento").addEventListener("keyup", function(event) {
+            function trasferimentoArticoli() {
                     $("#qrcode").attr("disabled", true);
-            });
+                    $.post({
+                            url: "./ws/TrasferimentoArticoli.php?codUbicazione=" + sessionStorage.getItem('ubicazione') + "&codArticolo=" + sessionStorage.getItem('articolo')+ "&qty=" + $("#qty").val() + "&codUbicazioneDest=" + sessionStorage.getItem('ubicazione-destinazione'),
+                            dataType: 'json',
+                            success: function(data, status) {
+                                console.log(data);
+                                $("#magazzinoDest").append("<div style='display: block' class='alert alert-success' role='alert'> Trasferimento avvenuto con successo </div>");
+                            }
+                            });
+            }
             
         </script>
     </body>
