--- a/interrogazione-ubicazione.html
+++ b/interrogazione-ubicazione.html
@@ -26,58 +26,6 @@
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
-        <script>
-            $(document).ready(function(){
-                $(".focus").focus();
-                setInterval(function() {
-                    console.log("Focusing esaurimento");
-                    $("#qrcode").get(0).focus();
-                }, 1000);
-            });
-            /**
-            let i = 0;
-            document.getElementById("qrcode").addEventListener("keyup", function(event) {
-                if (event.keyCode === 13) {
-                    event.preventDefault();
-                    i++;
-                    barCode = $("#qrcode").val();
-                    if(i == 1) {
-                        sessionStorage.setItem('ubicazione', barCode);
-                    }
-                    if(i == 2) {
-                        sessionStorage.setItem('articolo', barCode);
-                    }
-                    if(i == 3) {
-                        sessionStorage.setItem('ubicazione-destinazione', barCode);
-                        $("#qrcode").attr('disabled',true);
-                    }
-                }
-            });
-            */
-            document.getElementById("qrcode").addEventListener("keyup", function(event) {
-                if (event.keyCode === 13) {
-                    $.get({
-                        url: "./ws/Interrogazione.php?codUbicazione=" + $("#qrcode").val(),
-                        dataType: 'json',
-                        //headers: {
-                         //   'Authorization': 'Bearer ' + sessionStorage.getItem('token')
-                        //},
-                        success: function(data, status) {
-                            let dati = data["data"];
-                            let datiStampati = "<p style='color:red'>MAGAZZINO: <strong style='text-transform:uppercase'>"+dati[0].ID_MAGAZZINO+"</strong></p>";
-                            for(let i = 0; i < Object.keys(dati).length;i++){
-                                
-                                datiStampati += "<p>Articolo: <strong>"+dati[i].ID_ARTICOLO+"</strong> | Quantita: <strong>"+dati[i].QTA_GIAC_PRM+" pz. </strong></p>";
-                                datiStampati += "<p>Descrizione: <strong>"+dati[i].DESCRIZIONE+"</strong> </p>";
-                                datiStampati += "<hr/>";
-                            }
-                            $(".listaOsai").html(datiStampati);
-                        }
-                    });
-                    //hide_errors();
-                    $("#qrcode").attr("disabled", true);
-                }
-            });
-        </script>
+        <script src="assets/js/interrogazioneUbicazione.js"></script>
     </body>
 </html>
