fix messaggio di errore

--- a/interrogazione-ubicazione.html
+++ b/interrogazione-ubicazione.html
@@ -20,9 +20,8 @@
         <div class="qrcode">
             <input type="password" class="form-control focus" id="qrcode" placeholder="QRCODE" aria-describedby="basic-addon2">
         </div>
-        <div class="listaOsai">
-
-        </div>
+        <div class="listaOsai"></div>
+        <div id="error_message"></div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
