--- a/trasferimento-articoli.html
+++ b/trasferimento-articoli.html
@@ -26,6 +26,7 @@
         <div class="btnDiv">
             <button onclick="trasferimentoArticoli()" type="button" id="btnTrasferimento" class="btn btnOsai" disabled="true"> Invia </button>
         </div>
+        <div id="error_message"></div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
