--- a/cambio-magazzino-ubicazione.html
+++ b/cambio-magazzino-ubicazione.html
@@ -24,7 +24,7 @@
         <div id="appendData"></div>
         <div id="magazzinoDest"></div>
         <div class="btnDiv">
-            <button onclick="cambioMagazzinoUbicazione()" type="button" id="btnCambio" class="btn btnOsai" disabled="true"> Conferma Magazzino </button>
+            <button onclick="cambioMagazzinoUbicazione()" type="button" id="btnCambio" class="btn btnOsai" disabled> Conferma Magazzino </button>
         </div>
         <div id="error_message"></div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
