--- a/cambio-magazzino-ubicazione.html
+++ b/cambio-magazzino-ubicazione.html
@@ -19,14 +19,14 @@
         <h3 class="titleOsai"> Cambio Magazzino Ubicazione</h3>
 
         <div class="qrcode">
-            <input type="password" class="form-control focus" id="qrcode" placeholder="QRCODE" aria-describedby="basic-addon2">
+            <input type="password" class="form-control focus" id="qrcode" placeholder="UBICAZIONE ORIG." aria-describedby="basic-addon2">
         </div>
         <div id="appendData"></div>
-        <div id="magazzinoDest"></div>
         <div class="btnDiv">
             <button onclick="cambioMagazzinoUbicazione()" type="button" id="btnCambio" class="btn btnOsai" disabled> Conferma Magazzino </button>
         </div>
         <div id="error_message"></div>
+        <div id="magazzinoDest"></div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
