--- a/interrogazione-ubicazione.html
+++ b/interrogazione-ubicazione.html
@@ -18,7 +18,7 @@
         </div>
         <h3 class="titleOsai">Interrogazione Ubicazione</h3>
         <div class="qrcode">
-            <input type="password" class="form-control focus" id="qrcode" placeholder="QRCODE" aria-describedby="basic-addon2">
+            <input type="password" class="form-control focus" id="qrcode" placeholder="UBICAZIONE" aria-describedby="basic-addon2">
         </div>
         <div class="listaOsai"></div>
         <div id="error_message"></div>
