--- a/trasferimento-articoli.html
+++ b/trasferimento-articoli.html
@@ -19,12 +19,17 @@
         <h3 class="titleOsai">Trasferimento Articoli</h3>
 
         <div class="qrcode">
-            <input type="password" class="form-control focus" id="qrcode" placeholder="QRCODE" aria-describedby="basic-addon2">
+            <input type="password" class="form-control focus" id="qrcode" placeholder="UBICAZIONE" aria-describedby="basic-addon2">
         </div>
         <div id="appendData"></div>
         <div id="magazzinoDest"></div>
         <div class="btnDiv">
-            <button onclick="trasferimentoArticoli()" type="button" id="btnTrasferimento" class="btn btnOsai" disabled="true"> Invia </button>
+            <div style="float: left;width: 50%;">
+                <button onclick="trasferimentoArticoli()" type="button" id="btnTrasferimento" class="btn btnOsai" disabled="true"> Conferma </button>
+            </div>
+            <div style="float: left;width: 50%;">
+                <button onclick="window.location.reload()" type="button" class="btn btnOsai"> Annulla </button>
+            </div>
         </div>
         <div id="error_message"></div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
