--- a/interrogazione-ubicazione.html
+++ b/interrogazione-ubicazione.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="google" content="notranslate">
         <meta name="viewport" content="width=device-width, user-scalable=no,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-
+        <!-- codice test ubicazione = PL-0001 articolo = 00000019 -->
         <title>Movimentazione Ubicazioni</title>
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/style.css?v=6">
@@ -18,7 +18,7 @@
         </div>
         <h3 class="titleOsai">Interrogazione Ubicazione</h3>
         <div class="qrcode">
-            <input type="password" class="form-control focus" id="qrcode" placeholder="UBICAZIONE" aria-describedby="basic-addon2">
+            <input type="text" class="form-control focus" id="qrcode" placeholder="UBICAZIONE (PL-0001)" aria-describedby="basic-addon2">
         </div>
         <div class="listaOsai"></div>
         <div id="error_message"></div>
