fix ws magazziniAlternativi

--- a/cambio-magazzino-ubicazione.html
+++ b/cambio-magazzino-ubicazione.html
@@ -19,7 +19,7 @@
         <h3 class="titleOsai"> Cambio Magazzino Ubicazione</h3>
 
         <div class="qrcode">
-            <input type="password" class="form-control focus" id="qrcode" placeholder="UBICAZIONE ORIG." aria-describedby="basic-addon2">
+            <input type="text" class="form-control focus" id="qrcode" placeholder="UBICAZIONE ORIG." aria-describedby="basic-addon2">
         </div>
         <div id="appendData"></div>
 
