--- a/trasferimento-articoli.html
+++ b/trasferimento-articoli.html
@@ -19,7 +19,7 @@
         <h3 class="titleOsai">Trasferimento Articoli</h3>
 
         <div class="qrcode">
-            <input type="password" class="form-control focus" id="qrcode" placeholder="UBICAZIONE" aria-describedby="basic-addon2">
+            <input type="text" class="form-control focus" id="qrcode" placeholder="UBICAZIONE" aria-describedby="basic-addon2">
         </div>
         <div id="appendData"></div>
         <div id="magazzinoDest"></div>
