--- a/cambio-magazzino-ubicazione.html
+++ b/cambio-magazzino-ubicazione.html
@@ -25,7 +25,7 @@
 
         <div class="btnDiv">
             <div style="float: left;width: 50%;">
-                <button onclick="cambioMagazzinoUbicazione()" type="button" id="btnCambio" class="btn btnOsai" disabled>Conferma</button>
+                <button onclick="cambioMagazzinoUbicazione()" type="button" id="btnCambio" class="btn btnOsai" disabled="diableBtn">Conferma</button>
             </div>
             <div style="float: left;width: 50%;">
                 <button onclick="window.location.reload()" type="button" class="btn btnOsai"> Annulla </button>
