--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <link rel="stylesheet" href="assets/css/v4-font-face.css">
     </head>
     <body>
-        <div class="menuOsai red">
-            <div><a class="nav-link" href="./interrogazione-ubicazione.html">Interrogazione Ubicazione</a></div>
+        <div class="menuOsai red" onclick="window.location='./interrogazione-ubicazione.html'">
+            <p>Interrogazione Ubicazione</p>
         </div>
-        <div class="menuOsai green">
-            <div><a class="nav-link" href="./cambio-magazzino-ubicazione.html">Cambio Magazzino Ubicazione</a></div>
+        <div class="menuOsai green" onclick="window.location='./cambio-magazzino-ubicazione.html'">
+            <p>Cambio Magazzino Ubicazione</p> 
         </div>
-        <div class="menuOsai blue">
-            <div><a class="nav-link" href="./trasferimento-articoli.html">Trasferimento Articoli</a></div>
+        <div class="menuOsai blue" onclick="window.location='./trasferimento-articoli.html'">
+            <p>Trasferimento Articoli</p>
         </div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script src="assets/js/popper.min.js"></script>
