--- a/cambio-magazzino-ubicazione.html
+++ b/cambio-magazzino-ubicazione.html
@@ -21,6 +21,7 @@
         <div class="qrcode">
             <input type="text" class="form-control focus" id="qrcode" placeholder="UBICAZIONE ORIG." aria-describedby="basic-addon2">
         </div>
+        <div id="appendSelect"></div>
         <div id="appendData"></div>
 
         <div class="btnDiv">
