--- a/interrogazione-ubicazione.html
+++ b/interrogazione-ubicazione.html
@@ -7,7 +7,7 @@
         <!-- codice test ubicazione = PL-0001 articolo = 00000019 -->
         <title>Movimentazione Ubicazioni</title>
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-        <link rel="stylesheet" href="assets/css/style.css?v=6">
+        <link rel="stylesheet" href="assets/css/style.css?v=7">
         <link rel="stylesheet" href="assets/css/all.css">
         <link rel="stylesheet" href="assets/css/fontawesome.css">
         <link rel="stylesheet" href="assets/css/v4-font-face.css">
@@ -25,6 +25,6 @@
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/js/interrogazioneUbicazione.js"></script>
+        <script src="assets/js/interrogazioneUbicazione.js?v=2"></script>
     </body>
 </html>
