--- a/cambio-magazzino-ubicazione.html
+++ b/cambio-magazzino-ubicazione.html
@@ -7,7 +7,7 @@
 
         <title> Cambio Magazzino Ubicazione</title>
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-        <link rel="stylesheet" href="assets/css/style.css?v=6">
+        <link rel="stylesheet" href="assets/css/style.css?v=7">
         <link rel="stylesheet" href="assets/css/all.css">
         <link rel="stylesheet" href="assets/css/fontawesome.css">
         <link rel="stylesheet" href="assets/css/v4-font-face.css">
@@ -37,6 +37,6 @@
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/js/cambioMagazzinoUbicazione.js"></script>
+        <script src="assets/js/cambioMagazzinoUbicazione.js?v=2"></script>
     </body>
 </html>
