--- a/trasferimento-articoli.html
+++ b/trasferimento-articoli.html
@@ -7,7 +7,7 @@
 
         <title>Trasferimento articoli</title>
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-        <link rel="stylesheet" href="assets/css/style.css?v=6">
+        <link rel="stylesheet" href="assets/css/style.css?v=7">
         <link rel="stylesheet" href="assets/css/all.css">
         <link rel="stylesheet" href="assets/css/fontawesome.css">
         <link rel="stylesheet" href="assets/css/v4-font-face.css">
@@ -34,6 +34,6 @@
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/js/trasferimentoArticoli.js"></script>  
+        <script src="assets/js/trasferimentoArticoli.js?v=2"></script>  
     </body>
 </html>
