--- a/trasferimento-articoli.html
+++ b/trasferimento-articoli.html
@@ -27,7 +27,7 @@
                 <button onclick="trasferimentoArticoli(false)" type="button" id="btnTrasferimento" class="btn btnOsai" disabled="true"> Conferma </button>
             </div>
             <div style="float: left;width: 50%;">
-                <button onclick="window.location.reload()" type="button" class="btn btnOsai"> Annulla </button>
+                <button onclick="window.location.reload()" type="button" id="btnAnnulla" class="btn btnOsai"> Annulla </button>
             </div>
             <div class="btnRipetiDiv">
                 <button onclick="trasferimentoArticoli(true)" type="button" id="btnRipeti" class="btn btnOsai" disabled="true"> Conferma e Ripeti </button>
