decimale a 3 cifre,  torna al menù cliccabile

--- a/cambio-magazzino-ubicazione.html
+++ b/cambio-magazzino-ubicazione.html
@@ -13,8 +13,8 @@
         <link rel="stylesheet" href="assets/css/v4-font-face.css">
     </head>
     <body>
-        <div class="interrogaUbiOsai green">
-            <div><a class="nav-link" style="text-transform: uppercase;" href="./index.html">Torna al Menu</a></div>
+        <div class="interrogaUbiOsai green" onclick="window.location='./index.html'">
+            <p>Torna al Menu</p>
         </div>
         <h3 class="titleOsai"> Cambio Magazzino Ubicazione</h3>
 
