--- a/trasferimento-articoli.html
+++ b/trasferimento-articoli.html
@@ -13,8 +13,8 @@
         <link rel="stylesheet" href="assets/css/v4-font-face.css">
     </head>
     <body>
-        <div class="interrogaUbiOsai blue">
-            <div><a class="nav-link" style="text-transform: uppercase;" href="./index.html">Torna al Menu</a></div>
+        <div class="interrogaUbiOsai blue" onclick="window.location='./index.html'">
+            <div><p>Torna al Menu</p></div>
         </div>
         <h3 class="titleOsai">Trasferimento Articoli</h3>
 
