--- a/interrogazione-ubicazione.html
+++ b/interrogazione-ubicazione.html
@@ -13,8 +13,8 @@
         <link rel="stylesheet" href="assets/css/v4-font-face.css">
     </head>
     <body>
-        <div class="interrogaUbiOsai red">
-            <div><a class="nav-link" style="text-transform: uppercase;" href="./index.html">Torna al Menu</a></div>
+        <div class="interrogaUbiOsai red" onclick="window.location='./index.html'">
+            <div><p>Torna al Menu</p></div>
         </div>
         <h3 class="titleOsai">Interrogazione Ubicazione</h3>
         <div class="qrcode">
