--- a/interrogazione-ubicazione.html
+++ b/interrogazione-ubicazione.html
@@ -20,6 +20,7 @@
         <div class="qrcode">
             <input type="text" class="form-control focus" id="qrcode" placeholder="UBICAZIONE (PL-0001)" aria-describedby="basic-addon2">
         </div>
+        <button onclick="ripetiInterrogazione()" type="button" id="btnInterroga" class="btn btnOsai"> Interroga altro </button>
         <div class="listaOsai"></div>
         <div id="error_message"></div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
