--- a/login.html
+++ b/login.html
@@ -53,8 +53,8 @@
               url: "./ws/login.php",
               dataType: 'json',
               data: {
-                  username: 'finsoft',//$("#username").val()
-                  password: 'finsoft2022'//$("#password").val()
+                  username: $("#username").val(),//
+                  password: $("#password").val()//
               },
               success: function(data, status) {
                   if (sessionStorage.getItem('requiredRole') && data["value"]["ruolo"] != sessionStorage.getItem('requiredRole')) {
