--- a/cambio-magazzino-ubicazione.html
+++ b/cambio-magazzino-ubicazione.html
@@ -35,8 +35,15 @@
         <div id="error_message"></div>
         <div id="magazzinoDest"></div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
+        <script>
+            $(document).ready(function(){
+                if(sessionStorage.getItem( "token") == null){
+                    location.href="./login.html";
+                }
+            });
+        </script>
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/js/cambioMagazzinoUbicazione.js?v=2"></script>
+        <script src="assets/js/cambioMagazzinoUbicazione.js?v=2"></script>        
     </body>
 </html>
