--- a/interrogazione-ubicazione.html
+++ b/interrogazione-ubicazione.html
@@ -24,6 +24,13 @@
         <div class="listaOsai"></div>
         <div id="error_message"></div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
+        <script>
+            $(document).ready(function(){
+                if(sessionStorage.getItem( "token") == null){
+                    location.href="./login.html";
+                }
+            });
+        </script>
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
         <script src="assets/js/interrogazioneUbicazione.js?v=2"></script>
