--- a/cambio-magazzino-ubicazione.html
+++ b/cambio-magazzino-ubicazione.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="assets/css/v4-font-face.css">
     </head>
     <body>
-        <div class="interrogaUbiOsai green" onclick="window.location='./index.html'">
+        <div class="interrogaUbiOsai blue" onclick="window.location='./index.html'">
             <p>Torna al Menu</p>
         </div>
         <h3 class="titleOsai"> Cambio Magazzino Ubicazione</h3>
