--- a/interrogazione-ubicazione.html
+++ b/interrogazione-ubicazione.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="assets/css/v4-font-face.css">
     </head>
     <body>
-        <div class="interrogaUbiOsai red" onclick="window.location='./index.html'">
+        <div class="interrogaUbiOsai blue" onclick="window.location='./index.html'">
             <div><p>Torna al Menu</p></div>
         </div>
         <h3 class="titleOsai">Interrogazione Ubicazione</h3>
