--- a/index2.html
+++ b/index2.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="background-color: lightsteelblue;">
     <head>
         <meta charset="utf-8">
         <meta name="google" content="notranslate">
         <meta name="viewport" content="width=device-width, user-scalable=no,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 
-        <title>Movimentazione Ubicazioni</title>
+        <title>Homepage </title>
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/style.css?v=6">
         <link rel="stylesheet" href="assets/css/all.css">
@@ -13,22 +13,33 @@
         <link rel="stylesheet" href="assets/css/v4-font-face.css">
     </head>
     <body>
-        <div class="container2">
-            <div class="menu2"><p> Interrogazione Ubicazione</p></div>
-            <div class="menu2"><p> Cambio Magazzino Ubicazione</p></div>
-            <div class="menu2"><p> Trasferimento Articoli</p></div>
-            <div class="menu2"><p> Svuota Ubicazione </p></div>
-            <div class="menu2"><p> Gestione Carrelli </p></div>
-            <div class="menu2"><p> Gestione note e posizione</p></div>
-            <div class="menu2"><p> Logout </p></div>
+        <div class="interrogaUbiOsai blue">
+            <div><p>OSAI</p></div>
+        </div>
+        <div class="container">
+        <div class="row">
+            <div class="column menu2" onclick="window.location='./interrogazione-ubicazione.html'"><i class="fa-solid fa-3x fa-clipboard-question"></i><p> Interrogazione Ubicazione</p></div>
+            <div class="column menu2" onclick="window.location='./cambio-magazzino-ubicazione.html'"><i class="fa-solid fa-3x fa-truck-moving"></i><p> Cambio Magazzino Ubicazione</p></div>
+        </div>
+        <div class="row">
+            <div class="column menu2" onclick="window.location='./trasferimento-articoli.html'"><i class="fa-solid fa-3x fa-arrow-right-arrow-left"></i><p> Trasferimento <br> Articoli</p></div>
+            <div class="column menu2"><i class="fa-solid fa-3x fa-warehouse"></i><p> Svuota <br> Ubicazione </p></div>
+        </div>
+        <div class="row">
+            <div class="column menu2"><i class="fa-solid fa-3x fa-cart-flatbed"></i><p> Gestione <br> Carrelli </p></div>
+            <div class="column menu2"><i class="fa-solid fa-3x fa-magnifying-glass-location"></i><p> Gestione note e posizione</p></div>
+        </div>
+        <div class="row">
+            <div class="column menu2"><i class="fa-solid fa-3x fa-arrow-right-from-bracket"></i><p> Logout </p></div>
+        </div>
         </div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
-        <script>
+        <!-- <script>
             $(document).ready(function(){
-                $('.menuOsai').css('height',(window.innerHeight/3));
+                $('.menu2').css('height',(window.innerHeight/7 - 10));
             });
-        </script>
+        </script> -->
     </body>
 </html>
