--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
         <link rel="stylesheet" href="assets/css/v4-font-face.css">
     </head>
     <body>
-        <div class="interrogaUbiOsai blue">
-            <div><p>OSAI</p></div>
-        </div>
+
+        <nav class="navbar blue">
+            <p class="navTitle">OSAI</p>
+              <button class="btn btn-outline-light btnLogout" onclick="logout()" type="button"><i class="fa-solid fa-arrow-right-from-bracket logout"> </i> </button>
+          </nav>
+
+        <!-- <div class="interrogaUbiOsai blue">
+            <div><p>OSAI </p> </div><div><i class="fa-solid fa-arrow-right-from-bracket logout"></i></div>
+        </div> -->
         <div class="container">
             <div class="row">
-                <div class="column menu2" onclick="window.location='./interrogazione-ubicazione.html'"><i class="fa-solid fa-3x fa-clipboard-question"></i><p> Interrogazione Ubicazione</p></div>
-                <div class="column menu2" onclick="window.location='./cambio-magazzino-ubicazione.html'"><i class="fa-solid fa-3x fa-truck-moving"></i><p> Cambio Magazzino Ubicazione</p></div>
+                <div class="column menu2" onclick="window.location='./interrogazione-ubicazione.html'"><i class="fa-solid fa-3x fa-clipboard-question"></i><p> Interrogazione <br> Ubicazione</p></div>
+                <div class="column menu2" onclick="window.location='./cambio-magazzino-ubicazione.html'"><i class="fa-solid fa-3x fa-truck-moving"></i><p> Cambio Magazzino <br> Ubicazione</p></div>
             </div>
             <div class="row">
                 <div class="column menu2" onclick="window.location='./trasferimento-articoli.html'"><i class="fa-solid fa-3x fa-arrow-right-arrow-left"></i><p> Trasferimento <br> Articoli</p></div>
@@ -27,11 +33,11 @@
             </div>
             <div class="row">
                 <div class="column menu2"><i class="fa-solid fa-3x fa-cart-flatbed"></i><p> Gestione <br> Carrelli </p></div>
-                <div class="column menu2"><i class="fa-solid fa-3x fa-magnifying-glass-location"></i><p> Gestione note e posizione</p></div>
+                <div class="column menu2"><i class="fa-solid fa-3x fa-magnifying-glass-location"></i><p> Gestione note <br> e posizione</p></div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="column menu2"><i class="fa-solid fa-3x fa-arrow-right-from-bracket"></i><p> Logout </p></div>
-            </div>
+            </div> -->
         </div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script>
@@ -40,6 +46,10 @@
                     location.href="./login.html";
                 }
             });
+            function logout() {
+                sessionStorage.removeItem("token");
+                location.href="./login.html";
+            }
         </script>
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
